--- a/Backend/.env
+++ b/Backend/.env
@@ -15,5 +15,5 @@ CLOUD_NAME=dxooo75o4
 API_KEY=661253191564143
 API_SECRET=YFYfW9SjvVqr8SMrARNFbZ-mMtU
 
-FRONTEND_URL=https://writelt-vishalpandey1799-gmailcoms-projects.vercel.app
+FRONTEND_URL=https://writelt.vercel.app
 
